--- a/styles/main.css
+++ b/styles/main.css
@@ -1,84 +1,78 @@
+/* =========== UNIVERSAL SELECTOR =========== */
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
-
-.clearfix::after {
-    content: "";
-    clear: both;
-    display: table;
-  }
-
+/* =========== SHADOW TEXT ================= */
 .shadow {
     text-shadow: 1px 1px 15px maroon;
     font-variant: small-caps;
     font-weight: bolder;
 }
 
-html {
-    background-color: lightsteelblue;
-    background-image: url(../images/bgtile.jpg);
-}
+/*=======================================================
+
+                   ROOT ELEMENTS
+
+=======================================================*/
 
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 100%;
-    max-width: 1200px;
+   
     width: 100%;
-    border: 3px solid steelblue;
-    margin: 0 auto;
-    background-color: white;
-    border-radius: 10px;
-    box-shadow: 5px 5px 20px 10px black;
+
+ 
+    
 }
 
+/*=======================================================
+
+                      HEADER
+
+=======================================================*/
 header {
     border-bottom: 3px solid steelblue;
     background-image: linear-gradient(white, lightsteelblue);
     border-radius: 10px 10px 0 0;
+    display: flex;
 }
-
+header div {
+    display: flex;
+    flex-direction: column;
+}
 header h2 {
     font-size: 250%;
     font-style: italic;
     color: steelblue;
-    text-shadow: 3px 3px 7px steelblue;
+    text-shadow: 3px 3px 12px steelblue;
     
-}
-header h2, header h3 {
-    padding: .5em;
-}
-
-h1 {
-    padding: .75em 0;
-}
-h3, h4 {
-    padding: .5em 0;
-}
-p {
-    padding: .5em 0;
 }
 
 header img {
-    float: left;
-    margin: 0 .75em;
-    max-width: 140px; 
-    min-width: 70px; 
-    width: 100%; 
+    max-width: 140px;
+    min-width: 70px;
+    width: 100%;
 }
 
+/*=======================================================
+
+             NAVIGATION MENU - #nav_menu
+
+=======================================================*/
 #nav_menu {
     border-bottom: 3px solid steelblue;
     background-color: steelblue;
     
+   
 }
 #nav_menu ul {
     list-style-type: none;
     position: relative;
+    display: flex;
 }
 #nav_menu ul li {
-    float: left;
     width: 20%;
 }
 #nav_menu ul li a {
@@ -97,37 +91,32 @@ header img {
     top: 100%;
     width: 100%;
 }
-#nav_menu ul ul li {
-    float: none;
+#nav_menu ul ul li a {
+    text-align: left;
+    padding-left: 12px;
 }
 #nav_menu ul li:hover > ul {
     display: block;
 }
-#nav_menu > ul::after {
-    content: "";
-    clear: both;
-    display: block;
-}
+
 #nav_menu a:hover {
     color: black;
     background-color: lightsteelblue;
 }
 
-/* ===================================
+/* ==================================================
 
-             Navigation List
+       LEFT ASIDE NAVIGATION LIST - #nav_list
 
-======================================*/             
-#nav_list h2 {
-    margin-bottom: 5px;
-    text-align: center;
-}
+===================================================*/             
 #nav_list ul {
     list-style-type: none;
+    display: flex;
+    flex-direction: column;
+    gap: .5vh;
 }
 #nav_list li {
     width: 90%;
-    margin: 0 auto 5px;
     border: 1px solid steelblue;
     border-radius: 5px;
 }
@@ -144,110 +133,172 @@ header img {
     color: white;
 }
 
+/*===============================================
 
-main {
-    clear: both;
-    padding-right: .25em;
+                MAIN ELEMENTS
 
+===============================================*/
+a {
+    text-decoration: none;
 }
-
-/* Section Link Colors */
-section a:link, section a:visited{
-    color: maroon;
-}
-section a:hover, section a:focus {
+a:link, a:visited {
     color: steelblue;
 }
-
-/* Aside link Colors */
-aside a:link, aside a:visited {
-    color: steelblue;
-}
-aside a:hover, aside a:focus {
+a:hover, a:focus {
     color: maroon;
+    text-decoration: underline;
 }
-
+main { 
+    margin-top: 2vh;
+    justify-content: center;
+    display: flex;
+    gap: 1vw;
+}
 section {
-    float: left;
-    width: 50%;
-    padding: 0 .3em;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  flex-direction: column;
+  gap: 1vh ;
 }
 
+section h1 {
+    margin: 0;
+    margin-bottom: 2vh;
+
+}
+section h3 , section h4 {
+    margin-top: 2vh;
+}
 aside {
-    float: left;
-    width: 25%;
+   flex: 0 1 auto;
 }
-
 #rightcol {
-    float: right;
-    width: 25%;
-    border-left: 3px solid steelblue;
-    padding-left: 10px;
-}
+    display: flex;
+    flex-direction: column;
+    gap: 1vh;
+    background-color:lavender;
+    margin: 1vw;
+    padding: 2vw;
+    border-radius: 10;
+    border: 1px solid black;
+    box-shadow: 2px 2px 15px 2px black;
 
+}
 aside h3 {
-    text-align: center;
-    padding-top: 50px;
     color: maroon;
     font-size: 110%;
 }
 
-aside li {
-    line-height: 1.5em;
-}
-
 blockquote {
     width: 80%;
-    margin-left: 10%;
-    padding: 3px;
-    border-left: 25px solid salmon;
-    background-color: lightcyan;
+    margin: 1vh auto;
+    padding: 10px;
+    border-left: 25px solid steelblue;
+    border-top: 3px solid steelblue;
+    border-bottom: 3px solid steelblue;
+    border-right: 3px solid steelblue   ;
+    background-color: lightsteelblue;
+    border-radius: 15px;
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 120%;
+    font-style: italic;
+}
+blockquote:hover {
+    background-color: steelblue;
+    color: white;
 }
 
+/*==================================================
+
+                       FOOTER
+
+==================================================*/                       
 footer {
-    clear: both;
+    /* clear: both; */
     background-color: steelblue;
     padding: 15px 0;
     border-radius: 0 0 7px 7px;
 }
-
 footer p {
     font-size: 75%;
     text-align: center;
+    font-variant: small-caps;
     color: white;
 }
 
-#mobilemenu{ 
-    display: nonne ; 
+#mobilemenu {
+    display: none;
 }
 
-@media only screen and (max-width: 900px) { 
-    body  {
-        background-color: slategray;
-        box-shadow: none;
-        border: none;
-        font-size: 90%;
+/*=============================================================
+
+                  MEDIA QUERIES
+
+=============================================================*/
+@media only screen and (max-width: 900px) {
+    html {
+        background-image: none;
     }
-}
+    body {
+         box-shadow: none;
+         border: none;
+         font-size: 90%;
+         border-radius: 0;
+    }
 
+    main{ 
+        flex-wrap: wrap;
+    }
+    section { 
+        flex: 1 1 95%;
+    }
+
+    #leftcol {
+        order: 3;
+        flex: 1 1 80%;
+        align-self: auto;
+    }
+    #rightcol{
+        flex: 1 1 95%;
+    }
+    header, footer {
+        border-radius: 0;
+    }
+
+}
 
 @media only screen and (max-width: 767px) {
-    #nav_menu {
-        display: none; 
+
+    #rightcol {
+        border-left: none;
     }
-    #mobilemenu{ 
-        display: block; 
-    }
-    .slicknav_menu{ 
-        background-color: steelblue;
-    }
-    section, aside, #rightcol { 
-        float: none  ; 
+    section, aside, #rightcol {
+        flex: 0 1 95% ; 
+
+        /* float: none; */
+        /* width: 95%; */
     }
 }
-    @media only screen and (max-width: 479px) {
-        header{
-            font-size: 90; 
-        }
-       
+
+@media only screen and (max-width: 479px) {
+    #nav_menu ul { 
+        flex-direction: column;
+    }
+    #nav_menu ul li { 
+        text-align: center;
+        width: 100%;
+    }
+    #nav_menu ul li :first-of-type {
+        display: none;
+    }
+    #rightcol { 
+        flex: 0 1 100%;
+        width: 100%;
+        margin: 0;
+        padding: 2vw;
+        border: none;
+        border-radius: 0%;
+    }
 }
+
